Add thread stack information and minor bug fixes/code clean up.